assets/css/main.css
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
html {
    scroll-behavior: smooth;
}
body {
    font-family: 'Cairo', sans-serif;
    line-height: 1.4;
    color: white;
    background: #292929;
}
header {
    position: relative;
    z-index: 10;
}
a {
    color: white;
    transition: opacity .2s ease-out;
}
@media (min-width: 992px) {
    a:hover {
        opacity: .65;
    }
}
.header-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 10px;
    background-color: #292929;
    position: fixed;
    top: 0;
    left: 0;
}
@media (min-width: 576px) {
    .header-bar {
        padding: 10px 50px 10px 10px;
    }
}
.header-bar::after {
    content: '';
    width: 100%;
    height: 100%;
    box-shadow: 0 5px 30px rgba(0,0,0,.2);
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity .2s ease-out;
}
.header-bar.active::after {
    opacity: 1;
}
.logo {
    width: 114px;
    height: 50px;
    max-height: 50px;
    background-image: url(../img/logo.png);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: top left;
    transition: .2s ease-out;
}
.active .logo {
    max-height: 40px;
}
@media (max-width: 575px) {
    .logo {
        max-height: 38px;
    }
    .active .logo {
        max-height: 30px;
    }
}
.menu {
    display: flex;
    justify-content: space-between;
    width: calc(100% - 150px);
    max-width: 300px;
    position: relative;
    z-index: 10;
}
a.menu-item {
    text-decoration: none !important;
}
section {
    width: 100%;
    min-height: 100vh;
    position: relative;
}
section:nth-of-type(even) {
    background-color: #323232;
}
.home {
    padding: 20px;
}
.promo {
    position: absolute;
    z-index: 1;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    width: 500px;
    max-width: 80%;
    max-height: 85vh;
    background: #292929;
}
.promo h2 {
    margin-bottom: 10px;
    text-align: center;
}
.promo img {
    transition: opacity .2s ease-out;
    width: 100%;
}
.promo a:hover {
    opacity: 1;
}
.promo a:hover img {
    opacity: .7;
}
.line {
    width: 100%;
    background-color: #323232;
    position: absolute;
    left: 0;
    animation: fadeInOut;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    opacity: 0;
}
.line--1 {
    height: 5px;
    bottom: 75vh;
    animation-delay: 2s;
}
.line--2 {
    height: 8px;
    bottom: 62vh;
    animation-delay: 0s;
}
.line--3 {
    height: 2px;
    bottom: 49vh;
    animation-delay: 2.5s;
}
.line--4 {
    height: 3px;
    bottom: 30vh;
    animation-delay: 1s;
}
.line--5 {
    height: 5px;
    bottom: 20vh;
    animation-delay: 1.5s;
}
.line--6 {
    height: 2px;
    bottom: 15vh;
    animation-delay: .5s;
}
.container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    max-width: 1240px;
    margin: 0 auto;
    padding: 100px 0;
} 
.cnt-item {
    padding: 20px;
}
.cnt-item h3 {
    margin-bottom: 40px;
}
.cnt-item p {
    margin-bottom: 20px;
}
.cnt-item p:last-of-type,
.cnt-item li p {
    margin-bottom: 0;
}
@media (min-width: 992px) {
    .cnt-item {
        width: 50%
    }
}
@media (max-width: 991px) {
    .cnt-item {
        width: 100%
    }
}
@keyframes fadeInOut {
    0%      {opacity: 0;}
    25%     {opacity: 0;}
    50%     {opacity: 1;}
    75%     {opacity: 0;}
}
.container--dg {
    padding-top: 100px;
}
.container--dg h2 {
    width: 100%;
    text-align: center;
    margin-bottom: 50px;
}
.container--dg h3 {
    padding-left: 40px;
    margin-bottom: 30px;
}
.dsc-list {
    padding: 0 40px;
}
.dsc-list li {
    list-style: none;
    position: relative;
    padding-bottom: 30px;
    margin-bottom: 30px;
    border-bottom: 1px solid #323232;
}
.dsc-list li:last-of-type {
    padding-bottom: 0;
    margin-bottom: 0;
    border-bottom: none;
}
.dsc-list i {
    position: absolute;
    top: 4px;
    left: -40px;
    font-size: 24px;
}
.center-text {
    text-align: center;
}
.center-all {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: calc(100vh - 200px);
}
.social {
    border-top: 2px solid white;
    margin-top: 40px;
    padding-top: 20px;
}
.social i {
    font-size: 24px;
    padding: 20px;
}
.social a {
    text-decoration: none !important;
}
.mailto {
    line-height: 2;
    font-size: 40px;
    text-decoration: none !important;
}

